# SimulationLib

./: .cproject  .gitignore  .project  CMakeLists.txt  SimulationLib.sln  yamale_syntax.txt
MakeFileProject/: readme.txt
SimulationLib/: BirthDeathSim.cpp  BirthDeathSim.h  CMakeLists.txt  CSVExport-inl-new.h  CSVExport-inl.h  CSVExport-new-inl.h  CSVExport-new.cpp  CSVExport-new.h  CSVExport.cpp  CSVExport.h  Config.cpp  Config.h  ContinuousTimeStatistic.cpp  ContinuousTimeStatistic.h  DataFrame.cpp  DataFrame.h  DataFrame.t  DemographicData.cpp  DemographicData.h  DiscreteTimeStatistic.cpp  DiscreteTimeStatistic.h  DistDataFrame.cpp  IncidencePyramidTimeSeries.cpp  IncidencePyramidTimeSeries.h  IncidenceStatistic.cpp  IncidenceStatistic.h  IncidenceStatistics.cpp  IncidenceStatistics.h  IncidenceTimeSeries-inl.h  IncidenceTimeSeries.cpp  IncidenceTimeSeries.h  Makefile  ParamDataFrame.cpp  Parameter.cpp  Parameter.h  PrevalencePopulationPyramid.h  PrevalencePyramidTimeSeries.cpp  PrevalencePyramidTimeSeries.h  PrevalenceStatistic.cpp  PrevalenceStatistic.h  (+19 more)
SimulationLib/include/SimulationLib/: CSVExport.h  CSVImport.h  Calibrate.h  Config.h  ContinuousTimeStatistic.h  DataFrame.h  DataFrame.t  DataFrameEyal.h  DataFrameEyal.t  DataFrameEyalt.c  DiscreteTimeStatistic.h  Distribution.h  EventQueue.h  GeneralStatDist1.h  IncidencePyramidTimeSeries.h  IncidenceTimeSeries.h  JSONImport.h  JSONParameterize.h  Likelihood-adaptors.h  Likelihood-sums.h  Likelihood.h  Param.h  Parameter.h  ParseParams.h  PrevalencePyramidTimeSeries.h  PrevalenceTimeSeries.h  PyramidData.h  PyramidTimeSeries.h  TimeSeries.h  TimeStatistic.h
SimulationLib/include/SimulationLib/utils/: Bound.h
SimulationLib/include/utils/: csv.h
SimulationLib/src/: CMakeLists.txt  CSVExport-inl.h  CSVExport.cpp  CSVImport.cpp  Calibrate-inl.h  Calibrate.cpp  Config.cpp  Config.h  ContinuousTimeStatistic.cpp  DataFrame.cpp  DataFrame.h  DataFrame.t  DataFrameEyal.cpp  DiscreteTimeStatistic.cpp  DistDataFrame.cpp  IncidencePyramidTimeSeries.cpp  IncidenceTimeSeries-inl.h  JSONImport.cpp  JSONParameterize.cpp  Likelhood.cpp  Likelihood-inl.h  Likelihood.cpp  Param.cpp  ParamDataFrame.cpp  Parameter.cpp  Parameter.h  PrevalencePyramidTimeSeries.cpp  PrevalenceTimeSeries-inl.h  PyramidData-inl.h  PyramidData.cpp  PyramidTimeSeries.cpp  ReadParam.h
SimulationLib/src/ParamSchemas/: schema-regular.json
SimulationLib/src/ParamSchemas/distributions/: _PROTOTYPE.json  bernoulli.json  beta-binomial.json  beta.json  constant.json  johnson-su.json  normal.json  weibull.json
SimulationLib/tests/: CMakeLists.txt  Makefile  Person.h  template_int.h  tests-Bound.cpp  tests-CSVExport.cpp  tests-CSVImport.cpp  tests-Calibrate.cpp  tests-DiscreteTimeStatistic.cpp  tests-EventQueue.cpp  tests-EventQueueWithState.cpp  tests-JSON_param.cpp  tests-Likelihood.cpp  tests-Params.cpp  tests-PrevalenceTimeSeries.cpp  tests-PyramidData.cpp  tests-PyramidTimeSeries.cpp  tests-ReadParam.cpp  tests-config.cpp  tests-frame.cpp  tests-main.cpp
SimulationLib/tests/input/: AnMortRates.json  Annual mortality rates.csv  SIR Parameters.csv  SIRSimSettings.csv  SIR_Parameters.json  SIR_Parameters_mod.csv  Test2Rates.json  TestRates.json  Time in marriage.csv  TimeInMarraige.json  demographic-settings.csv  demographic-settings.json
SimulationLib/tests/tests-CSVExport-files/: SIR_Parameters.csv  test-config-frame.csv  test-config-frame2.csv  test-config-frame_explained  test-config.csv  test-csvimport-01.csv  test-csvimport-03.csv  test-csvimport-04.csv  test-t01-answer.csv  test-t02-answer.csv  test-t03-answer.csv  test-t04-answer.csv  test-t05-answer.csv  test-t06-answer.csv  test-t07-answer.csv  test-t08-answer.csv  test-t09-answer.csv  test-t10-answer.csv  test-t11-answer.csv  test-t12-answer.csv  test-tstats01-answer.csv  test-tstats02-answer.csv  test-tstats03-answer.csv  test-tstats04-answer.csv
SimulationLib/tests/utils/: compare_files.h
SimulationLib/utils/: Range.h
TestSimulationLib/: BirthDeathSim.cpp  BirthDeathSim.h  CMakeLists.txt  Makefile  ParallelBirthDeathSim.cpp  ParallelBirthDeathSim.h  PyramidBirthDeathSim  PyramidBirthDeathSim.cpp  PyramidBirthDeathSim.h  SerialBirthDeathSim.cpp  SerialBirthDeathSim.h  hpcexecute.sh  run-ParallelBirthDeathSim.cpp  run-PyramidBirthDeathSim.cpp  run-SerialBirthDeathSim.cpp  test-BirthDeathSim.cpp
TestSimulationLib/PyramidBirthDeathSim-run1-output/: output-births.csv  output-deaths.csv  output-population.csv  output-pyramid-births.csv  output-pyramid-deaths.csv  output-pyramid-population.csv  output-stats-births.csv  output-stats-deaths.csv  output-stats-population.csv
